<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="fill_parent"
	 android:layout_height="fill_parent" 
	 android:background="#5f0101" >
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    
    <Button
        android:id="@+id/btnabout"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/about"
        android:background="#0277BD"
        android:textColor="#00FFFF"
        android:textStyle="bold"
        android:textSize="50sp" />
         
    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_instructions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:textColor="#00FFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/str_about"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="start"
        android:layout_margin="15dp"
        android:layout_marginBottom="35dp"
        android:textColor="#00FFFF"
        android:textSize="20sp" />
    
  </LinearLayout>
</ScrollView>