<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#5f0101"
    android:animateLayoutChanges="true"
    tools:context=".SecondMainActivity" >

	<LinearLayout
	    android:id="@+id/smoking_caterpillar_animation_layout"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:animateLayoutChanges="true" >
    	
    <ImageView
        android:contentDescription="@null"
		android:id="@+id/smoking_caterpillar_animation"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:src="@animator/animation_android" />
    
    <TextView
        android:id="@+id/textView0"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:textColor="#00FFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#000000"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="15dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/textTimer"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="#0277BD"
        android:textColor="#00FFFF"
        android:text="@string/textStartStop"
        android:textStyle="bold"
        android:textSize="50sp" />
    
    </LinearLayout>
</ScrollView>